force-app/main/default/objects/ChattingGroup__c/ChattingGroup__c.object-meta.xml
<CustomObject>
    <description>하나의 채팅방이 된다</description>
    <label>채팅그룹</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>채팅그룹</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>