force-app/main/default/objects/ChattingGroup__c/fields/IsPrivate__c.field-meta.xml
<CustomField>
    <fullName>IsPrivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>비밀 채팅방 활성화</description>
    <label>IsPrivate</label>
    <type>Checkbox</type>
</CustomField>