force-app/main/default/objects/ChattingGroup__c/fields/Members__c.field-meta.xml
<CustomField>
    <fullName>Members__c</fullName>
    <description>참여자 User Record Id 저장
최대 10명 제한
구분자는 &quot;;&quot;(세미콜론) 으로 한다.</description>
    <label>참여자 recordId</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>