force-app/main/default/objects/ChattingGroup__c/fields/Password__c.field-meta.xml
<CustomField>
    <fullName>Password__c</fullName>
    <description>10자리 이내 비밀 채팅방 비밀번호</description>
    <label>Password</label>
    <length>10</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>