force-app/main/default/objects/ChattingGroup__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>IsPrivate__c</columns>
    <columns>Password__c</columns>
    <filterScope>Everything</filterScope>
    <label>모두</label>
</ListView>